syntax = "proto3";

package indexed_operations;
option go_package = "gitlab.com/pietroski-software-company/lightning-db/lightning-node/go-lightning-node/schemas/generated/go/transactions/operations/indexed/indexed_operations;grpc_indexed_ops";

import "common/search/pagination.proto";
import "transactions/operations/operation_messages.proto";

// ################################################################################################################## \\

message Index {
  bool shall_index = 1;
  bytes parent_key = 2;
  repeated bytes index_keys = 3;
  IndexProperties index_properties = 4;
}

message IndexProperties {
  enum IndexDeletionBehaviour {
    NONE = 0;
    CASCADE = 1;
    INDEX_ONLY = 2;
  }

  enum IndexSearchPattern {
    ONE = 0;

    AND_COMPUTATIONAL = 1;
    OR_COMPUTATIONAL = 2;
  }

  IndexDeletionBehaviour index_deletion_behaviour = 1;
  IndexSearchPattern index_search_pattern = 2;
}

// ################################################################################################################## \\

// GetIndexedRequest
message GetIndexedRequest {
  operations.DatabaseMetaInfo database_meta_info = 1;
  operations.Item item = 2;

  Index index = 3;
}

// SetIndexedRequest
message SetIndexedRequest {
  operations.DatabaseMetaInfo database_meta_info = 1;
  operations.Item item = 2;

  Index index = 3;
}

// DeleteIndexedRequest
message DeleteIndexedRequest {
  operations.DatabaseMetaInfo database_meta_info = 1;
  operations.Item item = 2;

  Index index = 3;
}

// ListIndexedRequest
message ListIndexedRequest {
  operations.DatabaseMetaInfo database_meta_info = 1;
  common.search.Pagination pagination = 2;

  Index index = 3;
}

// ################################################################################################################## \\
